# copy-metadata

./: Cargo.toml  README.md
.github/workflows/: test.yaml
src/: lib.rs
tests/: main.rs
